--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,9 @@
   <h1>Passphraser</h1>
   <div class="container">
     <div class="passphrase-container">
-      <div id="passphrase"></div>
+      <div id="passphrase-sizer">
+        <div id="passphrase"></div>
+      </div>
       <button id="copy-btn">📋 Copy</button>
       <div id="stats" class="explanation"></div>
 
