Made with <3 in LA

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -44,7 +44,7 @@
     {{ end}}
 
     <small>
-      Copyright 2022 Michael Kelly.
+      Made with ❤️  in Los Angeles, California, USA. Copyright 2022 Michael Kelly.
       <a href="https://github.com/mjkelly/passphraser">View the code on Github</a>.
     </small>
   </div>
