--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -43,10 +43,11 @@
     {{ .Content }}
     {{ end}}
 
-    <small>
-      Made with ❤️  in Los Angeles, California, USA. Copyright 2022 Michael Kelly.
+    <div id="footer">
+      Made with ❤️  in Los Angeles, California, USA.<br>
+      Copyright 2022 Michael Kelly.<br>
       <a href="https://github.com/mjkelly/passphraser">View the code on Github</a>.
-    </small>
+    </div>
   </div>
   {{ with resources.Get "wordlist.js" }}
     <script>{{ .Content | safeJS }}</script>
