--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -10,9 +10,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h1>Passphraser</h1>
   <div class="container">
     <div class="passphrase-container">
+      <h1>Pass&shy;phraser</h1>
       <div id="passphrase-sizer">
         <div id="passphrase"></div>
       </div>
