--- a/assets/main.css
+++ b/assets/main.css
@@ -13,7 +13,7 @@ h1 {
   text-transform: uppercase;
   font-size: 48pt;
   text-align: center;
-  margin: 40px 0 0 0;
+  margin: 0 0 0 0;
   font-family: 'sans-serif';
   font-weight: 500;
 }
@@ -93,13 +93,14 @@ button:focus-visible {
   text-align: center;
   border: 1px solid black;
   margin: 40px 0 80px 0;
-  padding: 20px;
+  padding: 60px 20px 60px 20px;
 }
 
 .explanation {
-  margin: 40px 0 40px 0;
+  margin: 40px auto 40px auto;
   font-size: small;
   color: #999;
+  max-width: 600px;
 }
 
 .button-container {
