JS cleanup: separate library and page setup

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -55,5 +55,8 @@
   {{ with resources.Get "passphrase.js" }}
     <script>{{ .Content | safeJS }}</script>
   {{ end }}
+  {{ with resources.Get "setup.js" }}
+    <script>{{ .Content | safeJS }}</script>
+  {{ end }}
 </body>
 </html>
