--- a/assets/main.css
+++ b/assets/main.css
@@ -9,17 +9,19 @@ body {
   font-family: 'Helvetica Nueue', 'Helvetiva', 'sans-serif';
 }
 
+
+
 h1 {
   text-transform: uppercase;
-  font-size: 48pt;
+  font-size: 60pt;
   text-align: center;
   margin: 0 0 0 0;
-  font-family: 'sans-serif';
-  font-weight: 500;
+  font-family: 'Inconsolata', sans-serif;
+  font-weight: 300;
 }
 @media (max-width: 700px) {
   h1 {
-    font-size: 36pt;
+    font-size: 45pt;
   }
 }
 
