--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,10 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ .Title }}</title>
+  {{ with resources.Get "fonts.css" | minify }}
+    <style>{{ .Content | safeCSS }}</style>
+  {{ end }}
   {{ with resources.Get "main.css" | minify }}
     <style>{{ .Content | safeCSS }}</style>
   {{ end }}
-  
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
