--- a/assets/main.css
+++ b/assets/main.css
@@ -93,7 +93,8 @@ button:focus-visible {
 
 .passphrase-container {
   text-align: center;
-  border: 1px solid black;
+  border: 2px solid transparent;
+  border-image: linear-gradient(to top left, #d10000, #ff6622, #ffda21, #33dd00, #1133cc, #220066) 1;
   margin: 40px 0 80px 0;
   padding: 60px 20px 60px 20px;
 }
