Update password manager recs, copyright, & wording

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -47,7 +47,7 @@
 
     <div id="footer">
       Made with ❤️  in Los Angeles, California, USA.<br>
-      Copyright 2022 Michael Kelly.<br>
+      Copyright 2022-2023 Michael Kelly.<br>
       <a href="https://github.com/mjkelly/passphraser">View the code on Github</a>.
     </div>
   </div>
